# TestsSerial

./: .gitignore  ChannelsBlinker.py  CheckChannels.py  README.md  SetChannels.py  pyproject.toml
Test/usr/lib/python3.8/: LMInterface.py  Logger.py
cycle/usr/lib/python3.8/: lmprotocol.py
