[tool.poetry]
name = "testsserial"
version = "0.1.0"
description = ""
authors = ["blues-alex <ya.blues@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
loguru = "^0.7.0"
plotly = "^5.14.1"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
